added page goods

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <header class="header">
         <div class="container">
           <div class="header-box">
-            <div class="header-logo logo">
+            <a href="./index.html" class="header-logo logo">
               <img src="./images/logoFood.png" alt="Logo" />
-            </div>
+            </a>
             <div class="header-controls">
               <button class="btn btn-primery">
                 <img src="./images/icons/user.png" alt="User" />
@@ -32,7 +32,8 @@
           <div class="container">
             <div class="banner-item">
               <h2 class="banner-item--title">
-                Онлайн-сервис<br> доставки еды на дом
+                Онлайн-сервис<br />
+                доставки еды на дом
               </h2>
               <p class="banner-item--subtitle">
                 Блюда из любимого ресторана привезет курьер в перчатках, маске и
@@ -44,20 +45,273 @@
         <section class="products">
           <div class="container">
             <div class="products-header">
-              <h3 class="products-header--title">
-                Рестораны
-              </h3>
-              <input type="text" class="products-header--search" placeholder="Поиск блюд и ресторанов" />
+              <h3 class="products-header--title">Рестораны</h3>
+              <input
+                type="text"
+                class="products-header--search"
+                placeholder="Поиск блюд и ресторанов"
+              />
+            </div>
+            <div class="products-wrapper">
+              <a href="./goods.html" class="products-card">
+                <div class="products-card__image">
+                  <img src="./images/rests/image1.jpg" alt="Menu" />
+                </div>
+                <div class="products-card__description">
+                  <div class="products-card__description--row">
+                    <h4 class="products-card__description--title">
+                      Пицца плюс
+                    </h4>
+                    <div class="products-card__description--badge">50 мин</div>
+                  </div>
+                  <div class="products-card__description--row">
+                    <div class="products-card__description-info">
+                      <div class="products-card__description-info--rating">
+                        <img src="./images/icons/star.svg" alt="" />
+                        4.5
+                      </div>
+                      <div class="products-card__description-info--price">
+                        От 900 ₽
+                      </div>
+                      <div class="products-card__description-info--group">
+                        Пицца
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a href="./goods.html" class="products-card">
+                <div class="products-card__image">
+                  <img src="./images/rests/image2.jpg" alt="Menu" />
+                </div>
+                <div class="products-card__description">
+                  <div class="products-card__description--row">
+                    <h4 class="products-card__description--title">Тануки</h4>
+                    <div class="products-card__description--badge">50 мин</div>
+                  </div>
+                  <div class="products-card__description--row">
+                    <div class="products-card__description-info">
+                      <div class="products-card__description-info--rating">
+                        <img src="./images/icons/star.svg" alt="" />
+                        4.5
+                      </div>
+                      <div class="products-card__description-info--price">
+                        От 900 ₽
+                      </div>
+                      <div class="products-card__description-info--group">
+                        Пицца
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a href="./goods.html" class="products-card">
+                <div class="products-card__image">
+                  <img src="./images/rests/image3.jpg" alt="Menu" />
+                </div>
+                <div class="products-card__description">
+                  <div class="products-card__description--row">
+                    <h4 class="products-card__description--title">FoodBand</h4>
+                    <div class="products-card__description--badge">50 мин</div>
+                  </div>
+                  <div class="products-card__description--row">
+                    <div class="products-card__description-info">
+                      <div class="products-card__description-info--rating">
+                        <img src="./images/icons/star.svg" alt="" />
+                        4.5
+                      </div>
+                      <div class="products-card__description-info--price">
+                        От 900 ₽
+                      </div>
+                      <div class="products-card__description-info--group">
+                        Пицца
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a href="./goods.html" class="products-card">
+                <div class="products-card__image">
+                  <img src="./images/rests/image4.jpg" alt="Menu" />
+                </div>
+                <div class="products-card__description">
+                  <div class="products-card__description--row">
+                    <h4 class="products-card__description--title">
+                      Жадина-пицца
+                    </h4>
+                    <div class="products-card__description--badge">50 мин</div>
+                  </div>
+                  <div class="products-card__description--row">
+                    <div class="products-card__description-info">
+                      <div class="products-card__description-info--rating">
+                        <img src="./images/icons/star.svg" alt="" />
+                        4.5
+                      </div>
+                      <div class="products-card__description-info--price">
+                        От 900 ₽
+                      </div>
+                      <div class="products-card__description-info--group">
+                        Пицца
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a href="./goods.html" class="products-card">
+                <div class="products-card__image">
+                  <img src="./images/rests/image5.jpg" alt="Menu" />
+                </div>
+                <div class="products-card__description">
+                  <div class="products-card__description--row">
+                    <h4 class="products-card__description--title">Точка еды</h4>
+                    <div class="products-card__description--badge">50 мин</div>
+                  </div>
+                  <div class="products-card__description--row">
+                    <div class="products-card__description-info">
+                      <div class="products-card__description-info--rating">
+                        <img src="./images/icons/star.svg" alt="" />
+                        4.5
+                      </div>
+                      <div class="products-card__description-info--price">
+                        От 900 ₽
+                      </div>
+                      <div class="products-card__description-info--group">
+                        Пицца
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a href="./goods.html" class="products-card">
+                <div class="products-card__image">
+                  <img src="./images/rests/image6.jpg" alt="Menu" />
+                </div>
+                <div class="products-card__description">
+                  <div class="products-card__description--row">
+                    <h4 class="products-card__description--title">
+                      PizzaBurger
+                    </h4>
+                    <div class="products-card__description--badge">50 мин</div>
+                  </div>
+                  <div class="products-card__description--row">
+                    <div class="products-card__description-info">
+                      <div class="products-card__description-info--rating">
+                        <img src="./images/icons/star.svg" alt="" />
+                        4.5
+                      </div>
+                      <div class="products-card__description-info--price">
+                        От 900 ₽
+                      </div>
+                      <div class="products-card__description-info--group">
+                        Пицца
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
         </section>
       </main>
+
+      <div class="card-modal__overlay">
+        <div class="card-modal">
+          <div class="card-modal__header">
+            <h2 class="card-modal__header--title">
+              Корзина
+            </h2>
+            <span class="card-modal__header--close">
+              <img src="./images/icons/close.svg" alt="">
+            </span>
+          </div>
+          <div class="card-modal__body">
+            <div class="card-item">
+              <p class="card-item__title">
+                Ролл угорь стандарт
+              </p>
+              <div class="card-item__controls">
+                <div class="card-item__controls--price">
+                  250 ₽
+                </div>
+                 <button class="btn btn-outline">-</button>
+                 <div class="card-item__controls--count">1</div>
+                 <button class="btn btn-outline">+</button>
+              </div>
+            </div>
+            <div class="card-item">
+              <p class="card-item__title">
+                Ролл угорь стандарт
+              </p>
+              <div class="card-item__controls">
+                <div class="card-item__controls--price">
+                  250 ₽
+                </div>
+                 <button class="btn btn-outline">-</button>
+                 <div class="card-item__controls--count">1</div>
+                 <button class="btn btn-outline">+</button>
+              </div>
+            </div>
+            <div class="card-item">
+              <p class="card-item__title">
+                Ролл угорь стандарт
+              </p>
+              <div class="card-item__controls">
+                <div class="card-item__controls--price">
+                  250 ₽
+                </div>
+                 <button class="btn btn-outline">-</button>
+                 <div class="card-item__controls--count">1</div>
+                 <button class="btn btn-outline">+</button>
+              </div>
+            </div>
+            <div class="card-item">
+              <p class="card-item__title">
+                Ролл угорь стандарт
+              </p>
+              <div class="card-item__controls">
+                <div class="card-item__controls--price">
+                  250 ₽
+                </div>
+                 <button class="btn btn-outline">-</button>
+                 <div class="card-item__controls--count">1</div>
+                 <button class="btn btn-outline">+</button>
+              </div>
+            </div>
+            <div class="card-item">
+              <p class="card-item__title">
+                Ролл угорь стандарт
+              </p>
+              <div class="card-item__controls">
+                <div class="card-item__controls--price">
+                  250 ₽
+                </div>
+                 <button class="btn btn-outline">-</button>
+                 <div class="card-item__controls--count">1</div>
+                 <button class="btn btn-outline">+</button>
+              </div>
+            </div>
+          </div>
+          <div class="card-modal__footer">
+            <div class="card-modal__footer--price">
+              1250 ₽
+            </div>
+            <div class="card-modal__footer--controls">
+              <button class="btn btn-primery btn-modal">
+                Оформить заказ
+              </button>
+              <button class="btn btn-outline">
+                Отмена
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
       <footer class="footer">
         <div class="container">
           <div class="footer-box">
-            <div class="footer-logo logo">
+            <a href="./index.html" class="footer-logo logo">
               <img src="./images/logoFood.png" alt="Logo" />
-            </div>
+            </a>
             <div class="footer-nav">
               <ul>
                 <li>Ресторанам</li>
