--- a/goods.html
+++ b/goods.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Delivery food</title>
   </head>
   <body>
@@ -19,7 +19,7 @@
                 <img src="./images/icons/user.png" alt="User" />
                 Войти
               </button>
-              <button class="btn btn-outline">
+              <button class="btn btn-outline" id="cart-button">
                 <img src="./images/icons/icon container.png" alt="" />
                 Корзина
               </button>
@@ -342,5 +342,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="./script/script.js"></script>
   </body>
 </html>
